<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="carInfo1"
                type="buu.informatics.s59160134.carpark.CarInfo" />
        <variable
                name="carInfo2"
                type="buu.informatics.s59160134.carpark.CarInfo" />
        <variable
                name="carInfo3"
                type="buu.informatics.s59160134.carpark.CarInfo" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto" android:textSize="24sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/header_text" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText4"
                app:layout_constraintTop_toBottomOf="@+id/header_text"
                app:layout_constraintBottom_toTopOf="@+id/editText5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp" android:hint="@string/what_is_your_no"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText5"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                app:layout_constraintBottom_toTopOf="@+id/editText6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_wide" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_wide" android:layout_marginTop="@dimen/margin_wide"
                android:hint="@string/what_is_your_brand" android:textAlignment="center"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText6"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginTop="@dimen/margin_wide" android:hint="@string/what_is_your_name"
                android:textAlignment="center"/>
        <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button2"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText6"/>
        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                app:layout_constraintStart_toEndOf="@+id/button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/button"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginStart="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6" android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:id="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/textView7" android:layout_marginTop="@dimen/margin_wide"
                app:layout_constraintTop_toBottomOf="@+id/title_text" android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide" android:textAlignment="center"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:id="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
